--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>CS143B.JosephMedina</groupId>
-    <artifactId>Project1</artifactId>
+    <groupId>CS143B.josepdm1</groupId>
+    <artifactId>Shell</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
