trying to find good logger, meanwhile debug for now

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,26 @@
 
     <groupId>CS143B.josepdm1</groupId>
     <artifactId>Shell</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
+
+<dependencies>
 
 
+</dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.1.9.RELEASE</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
