--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,14 @@
         <scope>test</scope>
     </dependency>
 
-
+    <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>3.5</version>
+    </dependency>
 
 </dependencies>
+
     <build>
         <plugins>
             <plugin>
