--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                </configuration>
                 <version>2.22.0</version>
             </plugin>
             <plugin>
